--- a/main.html
+++ b/main.html
@@ -2,15 +2,34 @@
 
 <html>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	
+	<body>
+		<!-- the entire body must be written by student -->
+	    <script type="text/javascript" src="./script.js">
+		</script>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
+		<div class="box">
+			<div class="box1">
+				margin 20px
+				<div class="box2">
+					border 15px solid blue
+					<div class="box3">
+						<p>padding 50px</p>
+						<p>color lightblue</p>
+						<div class="box4">
+							<---width 300px--->
+							<div class="box5">
+								This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</body>
 
 </html>
