--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 						<div class="box4">
 							<---width 300px--->
 							<div class="box5">
-								This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+								This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
 							</div>
 						</div>
 					</div>
