--- a/main.html
+++ b/main.html
@@ -11,23 +11,12 @@
 	    <script type="text/javascript" src="./script.js">
 		</script>
 
-		<div class="box">
-			<div class="box1">
-				margin 20px
-				<div class="box2">
-					border 15px solid blue
-					<div class="box3">
-						<p>padding 50px</p>
-						<p>color lightblue</p>
-						<div class="box4">
-							<---width 300px--->
-							<div class="box5">
-								This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div style="background-color: lightblue;
+			width: 300px;
+			border: 15px solid blue;
+			padding: 50px;
+			margin: 20px;">
+			This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
 		</div>
 		
 	</body>
